--- a/ui/index.html
+++ b/ui/index.html
@@ -8,36 +8,36 @@
 
     <!-- Primary Meta Tags -->
     <title>ProRVT</title>
-    <meta name="title" content="Shadcn Admin" />
+    <meta name="title" content="Prorvt Plugin" />
     <meta
       name="description"
-      content="Admin Dashboard UI built with Shadcn and Vite."
+      content="Supercharge Your Revit Workflow with ProjectRVT."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://shadcn-admin.netlify.app" />
-    <meta property="og:title" content="Shadcn Admin" />
+    <meta property="og:url" content="https://plugin.projectrvt.com" />
+    <meta property="og:title" content="Prorvt Plugin" />
     <meta
       property="og:description"
-      content="Admin Dashboard UI built with Shadcn and Vite."
+      content="Supercharge Your Revit Workflow with ProjectRVT."
     />
     <meta
       property="og:image"
-      content="https://shadcn-admin.netlify.app/images/shadcn-admin.png"
+      content="https://plugin.projectrvt.com/images/snapshot.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://shadcn-admin.netlify.app" />
-    <meta property="twitter:title" content="Shadcn Admin" />
+    <meta property="twitter:url" content="https://plugin.projectrvt.com" />
+    <meta property="twitter:title" content="Prorvt Plugin" />
     <meta
       property="twitter:description"
-      content="Admin Dashboard UI built with Shadcn and Vite."
+      content="Supercharge Your Revit Workflow with ProjectRVT."
     />
     <meta
       property="twitter:image"
-      content="https://shadcn-admin.netlify.app/images/shadcn-admin.png"
+      content="https://plugin.projectrvt.com/images/snapshot.png"
     />
 
     <meta name="theme-color" content="#fff" />
